--- a/styles.css
+++ b/styles.css
@@ -24,13 +24,13 @@ blockquote, q {quotes: none;}
 blockquote:before, blockquote:after, q:before, q:after {content: '';content: none;}
 table {border-collapse: collapse;border-spacing: 0;}
 *, ::after, ::before { border: 0 solid; box-sizing: border-box; }
-.cust_btn{display: block; width: 100%; height: 50px; line-height: 50px; text-align: center; background: 0 0; color: #fff; font-size: 17px; font-family: var(--main-font); border-radius: 50px; display: flex; justify-content: center; align-items: center; column-gap: 10px;max-width: 210px;border: 1px solid;}
+.cust_btn{display: block; width: 100%; height: 40px; line-height: 50px; text-align: center; background: var(--green); color: #fff; font-size: 17px; font-family: var(--main-font); border-radius: 10px; display: flex; justify-content: center; align-items: center; column-gap: 10px;max-width: 130px;border: 1px solid;margin: auto;}
 .cust_btn:hover{background: var(--color1);transition: 0.3s ease-in-out;}
 span, small{display: block;}
 .col2{-webkit-column-count: 2; -moz-column-count: 2; column-count: 2; -webkit-column-gap: 0; -moz-column-gap: 0; column-gap: 0; display: inline-block; width: 100%;}
 .col3{-webkit-column-count: 3; -moz-column-count: 3; column-count: 3; -webkit-column-gap: 0; -moz-column-gap: 0; column-gap: 0; display: inline-block; width: 100%;}
 body, html {background: var(--white);}
-
+.custom-svg{color: var(--green);}
 body.modal-open { overflow: hidden; }
 a{text-decoration: unset; color: var(--black);}
 a:hover{text-decoration: underline}
@@ -40,22 +40,22 @@ a:hover{text-decoration: underline}
 /* OTHERS */
 h1,h2,h3,h4,h5,h6{font-family: var(--main-font); color: var(--black); font-size: var(--font-large); font-weight: 100;}
 p{color: var(--white); font-size: var(--font-small);}
-.container{ position: relative; min-height: 0; width: 100%; max-width: 1440px;margin: auto;overflow: hidden;}
+.container{ position: relative; min-height: 0; width: 100%; max-width: 1440px;margin: auto;}
 .fixed_section {   position: fixed !important;   top: 0;   left: 0;   right: 0;   z-index: 999; }
 
-.container{ position: relative; min-height: 0; width: 100%; max-width: 1440px; margin: auto; overflow: hidden; }
+.container{ position: relative; min-height: 0; width: 100%; max-width: 1440px; margin: auto;  padding: 0 10px;overflow: hidden;}
 
 
 
 
 
 #login_section{}
-    .login_holder{display: flex;height: 100vh;align-items: center;gap: 80px;flex-wrap: wrap;}
+    .login_holder{display: flex;height: 100vh;align-items: center;gap: 80px;flex-wrap: wrap;justify-content: space-between;}
     .login_image{}
     .login_image figure{}
     .login_image figure img{width: 100%;max-width: 820px;height: 100vh;object-fit: cover;}
 
-    .login_form{width: 100%;max-width: 433px;}
+    .login_form{width: 100%;max-width: 433px;margin: 0 160px 0 0;}
     .login_logo{}
     .login_logo figure{}
     .login_logo figure img{width: 100%;}
@@ -113,7 +113,7 @@ p{color: var(--white); font-size: var(--font-small);}
 .show-password { position: absolute;  right: 20px;  top: 60%;}
 
   /* DASHBOARD */
-.topbar { background-color: #00221a; /* deep green */ color: white; display: flex; justify-content: space-between; align-items: center; padding: 8px 16px; height: 48px; border-bottom: 1px solid #00372a; font-family: sans-serif; }
+.topbar { background-color: #00221a; color: white; display: flex; justify-content: space-between; align-items: center; padding: 8px 16px; height: 48px; border-bottom: 1px solid #00372a; font-family: sans-serif; overflow: hidden;}
 .logo img { height: 32px; }
 .topbar-right { display: flex; align-items: center; gap: 16px; }
 .icon {    width: 20px;height: 20px;}
@@ -122,8 +122,12 @@ p{color: var(--white); font-size: var(--font-small);}
 .user-profile span { font-size: 14px; color: white; }
 .logo svg{width: 150px;}
 
-.box_holder1{display: flex;margin: 40px 0;gap: 10px;}
-.box1{width: 520px;height: 300px;background: var(--white);box-shadow: 0px 10px 5px -5px rgba(0,0,0,0.18);-webkit-box-shadow: 0px 10px 5px -5px rgba(0,0,0,0.18);-moz-box-shadow: 0px 10px 5px -5px rgba(0,0,0,0.18);position: relative;padding: 10px;}
+.box_holder1{display: flex;margin: 40px 0;gap: 10px;align-items: center;justify-content: space-around;}
+.box_holder1 .box-1{width: 100%; max-width: 487px;height: 300px;box-shadow: 0px 10px 5px -5px rgba(0,0,0,0.18);-webkit-box-shadow: 0px 10px 5px -5px rgba(0,0,0,0.18);-moz-box-shadow: 0px 10px 5px -5px rgba(0,0,0,0.18);padding: 10px;position: relative;}
+.box_holder1 div:first-child{}
+.box_holder1 div:nth-child(2){}
+.box_holder1 div:last-child{}
+.box1{}
 .box1-header{display: flex;gap: 10px;}
 .box1-header svg{width: 20px;height: 20px;}
 .box1-header h2{font-size: 20px;font-weight: 700;}
@@ -132,7 +136,7 @@ p{color: var(--white); font-size: var(--font-small);}
 .box1-footer-text{position: absolute;bottom: 20px;left: 0;right: 0;}
 .box1-footer-text h2{font-size: 15px;text-align: center;color: #75817D;font-weight: 700;}
 
-.box2{width: 520px;height: 300px;box-shadow: 0px 10px 5px -5px rgba(0,0,0,0.18);-webkit-box-shadow: 0px 10px 5px -5px rgba(0,0,0,0.18);-moz-box-shadow: 0px 10px 5px -5px rgba(0,0,0,0.18);position: relative;padding: 10px;}
+.box2{}
 .box2-header{display: flex;justify-content: space-between;}
 .box2-title{display: flex;gap: 10px;}
 .box2-title svg{width: 20px;height: 20px;}
@@ -140,7 +144,7 @@ p{color: var(--white); font-size: var(--font-small);}
 .box2-select{}
 .box2-select select{background: unset;border-radius: 10px;border: 1px solid var(--green);height: 31px;width: 140px;font-size: 15px;font-weight: 700;font-family: var(--main-font);padding-left: 10px;cursor: pointer;}
 .box2-select select option{cursor: pointer;}
-.box2-body{display: flex;flex-direction: column;gap: 20px;padding-top: 40px;}
+.box2-body{display: flex;flex-direction: column;gap: 20px;padding: 10px 0;}
 .attendance-entry{display: flex;justify-content: space-between;font-weight: 700;color: grey;}
 .attendance-entry span{}
 .attendance-entry span:first-child{}
@@ -148,40 +152,41 @@ p{color: var(--white); font-size: var(--font-small);}
 .attendance-entry span:nth-child(3){}
 .attendance-entry span:last-child{}
 .attendance-entry span .date{}
-.attendance-entry .status{font-weight: 700;}
+.attendance-entry .status{font-weight: 700;width: 40px;}
 .status.out { color: red; }
 .status.in { color: var(--green); }
 .attendance-entry span .time{}
 .box2-footer{position: absolute;bottom: 20px;right: 0;left: 0;text-align: center;}
-.box2-footer a{color: var(--green);font-weight: 700;}
+.box2-footer a{color: var(--green);font-weight: 700;max-width: 200px;margin: auto;color: var(--white);font-size: 15px;}
 .box2-footer a:hover{}
 
-.box3{width: 520px;height: 300px;box-shadow: 0px 10px 5px -5px rgba(0,0,0,0.18);-webkit-box-shadow: 0px 10px 5px -5px rgba(0,0,0,0.18);-moz-box-shadow: 0px 10px 5px -5px rgba(0,0,0,0.18);padding: 10px;}
+.box3{}
 .box3-header{display: flex;gap: 10px;}
 .box3-header svg{width: 20px;height: 20px;}
 .box3-header h2{font-size: 20px;font-weight: 700;}
 .box3-image{text-align: center;}
 .box3-image svg{width: auto;height: 220px;}
-.box3-footer-text{display: flex;align-items: center;}
+.box3-footer-text{display: flex;align-items: center;gap: 10px;}
 .box3-footer-text h2{font-size: 15px;font-weight: 700;}
 .box3-footer-text h2 a{}
 .box3-footer-text h2 a:hover{}
 
-.box-holder2{display: flex;}
-.box-holder2 .box1{}
+
+.box-2{width: 100%;  height: 300px; box-shadow: 0px 10px 5px -5px rgba(0,0,0,0.18); -webkit-box-shadow: 0px 10px 5px -5px rgba(0,0,0,0.18); -moz-box-shadow: 0px 10px 5px -5px rgba(0,0,0,0.18); padding: 10px; position: relative;}
+.box-holder2{display: flex;margin: 40px 0;gap: 10px;align-items: center;justify-content: space-between;}
+.box-holder2 .box1{width: 100%;height: 100%;}
 .box-holder2 .box1-header{}
 .box-holder2 .box1-header svg{}
 .box-holder2 .box1-header h2{}
 
 .box-holder2 .box1-image{}
 .box-holder2 .box1-image svg{}
-.box-holder2 .box1-footer-text{}
+.box-holder2 .box1-footer-text{bottom: 30px;text-align: center;position: static;}
 .box-holder2 .box1-footer-text h2{}
-.box-holder2 .box1-footer-text h2 a{}
-.box-holder2 .box1-footer-text h2 a:hover{}
-
-.box-holder2 .box2{}
-.box-holder2 .box2-header{}
+.box-holder2 .box1-footer-text a{font-size: 16px;margin-top: 10px;max-width: 220px;}
+.box-holder2 .box1-footer-text a:hover{}
+.box-holder2 .box2{width: 100%;height: auto;max-width: 490px;}
+.box-holder2 .box2-header{display: unset;}
 .box-holder2 .box2-tiyle{}
 .box-holder2 .box2-tiyle svg{}
 .box-holder2 .box2-tiyle h2{}
@@ -192,19 +197,21 @@ p{color: var(--white); font-size: var(--font-small);}
 .box-holder2 .box2-body{}
 .box-holder2 .requests{}
 .box-holder2 .request-head{}
-.box-holder2 .request-head h2{font-size: 30px;}
-.box-holder2 .request-head .request-body{}
-.box-holder2 .request-head .request-body h2{}
+.box-holder2 .request-head h2{font-size: 15px;font-weight: 700;}
+.box-holder2 .request-head .request-body{text-align: center;margin: 10px 0;}
+.box-holder2 .request-head .request-body h2{font-weight: normal;}
 .box-holder2 .leave-credits{}
 .box-holder2 .leave-body{}
-.box-holder2 .leave-body h2{font-size: 20px;}
-.box-holder2 .leave-credits-body{}
-.box-holder2 .leave-credits-item{}
-.box-holder2 .leave-credits-item h2{}
+.box-holder2 .leave-body h2{font-size: 15px;font-weight: 700;}
+.box-holder2 .leave-credits-body{margin: 10px 0;}
+.box-holder2 .leave-credits-item{display: flex;justify-content: space-between;margin: 23px 0;}
+.box-holder2 .leave-credits-item h2{font-weight: normal;}
 
-.box-holder2 .attendance{}
-.box-holder2 .attendance h2{}
-.box-holder2 .attendance a{}
-.box-holder2 .attendance a span{}
+.box-holder2 .attendance{display: flex;align-items: center;justify-content: space-between;margin: 10px 0;}
+.box-holder2 .attendance h2{font-size: 15px;font-weight: 700;}
+.box-holder2 .attendance a{margin: unset;background: unset;color: var(--black);height: 25px;max-width: 100px;justify-content: space-around;}
+.box-holder2 .attendance a span{width: 17px;height: 17px;line-height: 17px;}
 .box-holder2 .attendance a span svg{}
 .box-holder2 .attendance a:hover{}
+
+.box2-holder{display: flex;justify-content: space-between;align-items: center;}
